--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.snakerbone.bismuth_shovel": "Bismuth Shovel",
   "item.snakerbone.bismuth_hoe": "Bismuth Hoe",
   "item.snakerbone.bismuth_sword": "Bismuth Sword",
+  "item.snakerbone.kunzite_paxel": "Kunzite Paxel",
 
   "block.snakerbone.bismuth_block": "Bismuth Block",
   "block.snakerbone.bismuth_ore": "Bismuth Ore",
