--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -11,6 +11,11 @@
   "item.snakerbone.bismuth_hoe": "Bismuth Hoe",
   "item.snakerbone.bismuth_sword": "Bismuth Sword",
   "item.snakerbone.kunzite_paxel": "Kunzite Paxel",
+  "item.snakerbone.aneurysm_blade": "Aneurysm Blade",
+  "item.snakerbone.kunzite_helmet": "Kunzite Helmet",
+  "item.snakerbone.kunzite_chestplate": "Kunzite Chestplate",
+  "item.snakerbone.kunzite_leggings": "Kunzite Leggings",
+  "item.snakerbone.kunzite_boots": "Kunzite Boots",
 
   "block.snakerbone.bismuth_block": "Bismuth Block",
   "block.snakerbone.bismuth_ore": "Bismuth Ore",
