--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -36,6 +36,7 @@
   "block.snakerbone.cherry_blossom_door": "Cherry Blossom Door",
   "block.snakerbone.kunzite_lamp": "Kunzite Lamp",
   "block.snakerbone.turnip_crop": "Turnip Crop",
+  "block.snakerbone.pink_rose": "Pink Rose",
 
   "itemGroup.snakerbone.snake": "SnakerBone",
 
