--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -37,6 +37,7 @@
   "block.snakerbone.kunzite_lamp": "Kunzite Lamp",
   "block.snakerbone.turnip_crop": "Turnip Crop",
   "block.snakerbone.pink_rose": "Pink Rose",
+  "block.snakerbone.potted_pink_rose": "Potted Pink Rose",
 
   "itemGroup.snakerbone.snake": "SnakerBone",
 
