--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -20,6 +20,9 @@
   "item.snakerbone.turnip_seeds": "Turnip Seeds",
   "item.snakerbone.kali_music_disc": "Kali Music Disc",
   "item.snakerbone.kali_music_disc.desc": "Caster - Kali",
+  "item.snakerbone.kunzite_staff": "Kunzite Staff",
+  "item.snakerbone.kunzite_bow": "Kunzite Bow",
+  "item.snakerbone.honey_bucket": "Honey Bucket",
 
   "block.snakerbone.bismuth_block": "Bismuth Block",
   "block.snakerbone.bismuth_ore": "Bismuth Ore",
