--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -44,6 +44,10 @@
   "block.snakerbone.pink_rose": "Pink Rose",
   "block.snakerbone.potted_pink_rose": "Potted Pink Rose",
   "block.snakerbone.kunzite_blaster": "Kunzite Blaster",
+  "block.snakerbone.cherry_blossom_log": "Cherry Blossom Log",
+  "block.snakerbone.cherry_blossom_wood": "Cherry Blossom Wood",
+  "block.snakerbone.stripped_cherry_blossom_log": "Stripped Cherry Blossom Log",
+  "block.snakerbone.stripped_cherry_blossom_wood": "Stripped Cherry Blossom Wood",
 
   "itemGroup.snakerbone.snake": "SnakerBone",
 
