--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.snakerbone.kunzite_staff": "Kunzite Staff",
   "item.snakerbone.kunzite_bow": "Kunzite Bow",
   "item.snakerbone.honey_bucket": "Honey Bucket",
+  "item.snakerbone.cherry_blossom_sign": "Cherry Blossom Sign",
 
   "block.snakerbone.bismuth_block": "Bismuth Block",
   "block.snakerbone.bismuth_ore": "Bismuth Ore",
@@ -48,6 +49,7 @@
   "block.snakerbone.cherry_blossom_wood": "Cherry Blossom Wood",
   "block.snakerbone.stripped_cherry_blossom_log": "Stripped Cherry Blossom Log",
   "block.snakerbone.stripped_cherry_blossom_wood": "Stripped Cherry Blossom Wood",
+  "block.snakerbone.cherry_blossom_sign": "Cherry Blossom Sign",
 
   "itemGroup.snakerbone.snake": "SnakerBone",
 
