--- a/src/main/resources/assets/snakerbone/lang/en_us.json
+++ b/src/main/resources/assets/snakerbone/lang/en_us.json
@@ -50,6 +50,8 @@
   "block.snakerbone.stripped_cherry_blossom_log": "Stripped Cherry Blossom Log",
   "block.snakerbone.stripped_cherry_blossom_wood": "Stripped Cherry Blossom Wood",
   "block.snakerbone.cherry_blossom_sign": "Cherry Blossom Sign",
+  "block.snakerbone.cherry_blossom_leaves": "Cherry Blossom Leaves",
+  "block.snakerbone.cherry_blossom_sapling": "Cherry Blossom Sapling",
 
   "itemGroup.snakerbone.snake": "SnakerBone",
 
